overflow fix for chrome and mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
 }
 
 .App {
-  /* text-align: center; */
   font-family: 'Bebas Neue', cursive;
   min-height: 100vh;
   background-color: #DFD3C3 ;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .App-logo {
